// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransitionGroup && Transition Components Snapshot (Component) 1`] = `
.c0 {
  -webkit-transition: all 2000ms linear;
  transition: all 2000ms linear;
}

.c0.fade-enter {
  opacity: 0.01;
}

.c0.fade-enter.fade-enter-active {
  opacity: 1;
}

.c0.fade-exit {
  opacity: 1;
}

.c0.fade-exit.fade-exit-active {
  opacity: 0.01;
}

.c1 {
  -webkit-transition: all 2000ms linear;
  transition: all 2000ms linear;
}

.c1.zoom-enter {
  opacity: 0.01;
  -webkit-transform: scale3d(0.3,0.3,0.3);
  -ms-transform: scale3d(0.3,0.3,0.3);
  transform: scale3d(0.3,0.3,0.3);
}

.c1.zoom-enter.zoom-enter-active {
  opacity: 1;
  -webkit-transform: initial;
  -ms-transform: initial;
  transform: initial;
}

.c1.zoom-exit {
  opacity: 1;
  -webkit-transform: initial;
  -ms-transform: initial;
  transform: initial;
}

.c1.zoom-exit.zoom-exit-active {
  opacity: 0.01;
  -webkit-transform: scale3d(0.3,0.3,0.3);
  -ms-transform: scale3d(0.3,0.3,0.3);
  transform: scale3d(0.3,0.3,0.3);
}

.c2 {
  -webkit-transition: all 2000ms linear;
  transition: all 2000ms linear;
}

.c2.rotate-enter {
  opacity: 0.01;
  -webkit-transform: rotate3d(0,0,1,-200deg);
  -ms-transform: rotate3d(0,0,1,-200deg);
  transform: rotate3d(0,0,1,-200deg);
}

.c2.rotate-enter.rotate-enter-active {
  opacity: 1;
  -webkit-transform: initial;
  -ms-transform: initial;
  transform: initial;
}

.c2.rotate-exit {
  opacity: 1;
  -webkit-transform: initial;
  -ms-transform: initial;
  transform: initial;
}

.c2.rotate-exit.rotate-exit-active {
  opacity: 0.01;
  -webkit-transform: rotate3d(0,0,1,-200deg);
  -ms-transform: rotate3d(0,0,1,-200deg);
  transform: rotate3d(0,0,1,-200deg);
}

.c3 {
  -webkit-transition: all 2000ms linear;
  transition: all 2000ms linear;
}

.c3.roll-enter {
  opacity: 0.01;
  -webkit-transform: translate3d(100%,0,0) rotate3d(0,0,1,120deg);
  -ms-transform: translate3d(100%,0,0) rotate3d(0,0,1,120deg);
  transform: translate3d(100%,0,0) rotate3d(0,0,1,120deg);
}

.c3.roll-enter.roll-enter-active {
  opacity: 1;
  -webkit-transform: initial;
  -ms-transform: initial;
  transform: initial;
}

.c3.roll-exit {
  opacity: 1;
  -webkit-transform: initial;
  -ms-transform: initial;
  transform: initial;
}

.c3.roll-exit.roll-exit-active {
  opacity: 0.01;
  -webkit-transform: translate3d(100%,0,0) rotate3d(0,0,1,120deg);
  -ms-transform: translate3d(100%,0,0) rotate3d(0,0,1,120deg);
  transform: translate3d(100%,0,0) rotate3d(0,0,1,120deg);
}

<div>
  <div
    animation={null}
    className="c0"
  >
    0
  </div>
  <div
    animation={null}
    className="c1"
  >
    1
  </div>
  <div
    animation={null}
    className="c2"
  >
    2
  </div>
  <div
    animation={null}
    className="c3"
  >
    3
  </div>
</div>
`;

exports[`TransitionGroup && Transition Components Snapshot (ComponentDefault) 1`] = `
.c0 {
  -webkit-transition: all 1000ms linear;
  transition: all 1000ms linear;
}

.c0.fade-enter {
  opacity: 0.01;
}

.c0.fade-enter.fade-enter-active {
  opacity: 1;
}

.c0.fade-exit {
  opacity: 1;
}

.c0.fade-exit.fade-exit-active {
  opacity: 0.01;
}

<div>
  <div
    animation={null}
    className="c0"
  >
    0
  </div>
  <div
    animation={null}
    className="c0"
  >
    1
  </div>
  <div
    animation={null}
    className="c0"
  >
    2
  </div>
  <div
    animation={null}
    className="c0"
  >
    3
  </div>
</div>
`;

exports[`TransitionGroup && Transition Components Snapshot (ComponentKeyframes) 1`] = `
.c0 {
  -webkit-transition: all 1000ms linear;
  transition: all 1000ms linear;
}

.c0.fade-enter {
  opacity: 0.01;
}

.c0.fade-enter.fade-enter-active {
  opacity: 1;
}

.c0.fade-exit {
  opacity: 1;
}

.c0.fade-exit.fade-exit-active {
  opacity: 0.01;
}

.c0.fade-enter.fade-enter-active {
  -webkit-animation: bounceInDown 1000ms linear;
  animation: bounceInDown 1000ms linear;
}

.c0.fade-exit.fade-exit-active {
  -webkit-animation: bounceOutDown 1000ms linear;
  animation: bounceOutDown 1000ms linear;
}

<div>
  <div
    animation={
      Object {
        "enter": "bounceInDown",
        "exit": "bounceOutDown",
        "keyframes": "
            @keyframes bounceInDown {
              from, 60%, 75%, 90%, to {
                animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
              }
      
              0% {
                opacity: 0;
                transform: translate3d(0, -3000px, 0);
              }
      
              60% {
                opacity: 1;
                transform: translate3d(0, 25px, 0);
              }
      
              75% {
                transform: translate3d(0, -10px, 0);
              }
      
              90% {
                transform: translate3d(0, 5px, 0);
              }
      
              to {
                transform: translate3d(0, 0, 0);
              }
            }
      
            @keyframes bounceOutDown {
              20% {
                transform: translate3d(0, 10px, 0);
              }
      
              40%, 45% {
                opacity: 1;
                transform: translate3d(0, -20px, 0);
              }
      
              to {
                opacity: 0;
                transform: translate3d(0, 2000px, 0);
              }
            }
          ",
      }
    }
    className="c0"
  >
    0
  </div>
  <div
    animation={
      Object {
        "enter": "bounceInDown",
        "exit": "bounceOutDown",
        "keyframes": "
            @keyframes bounceInDown {
              from, 60%, 75%, 90%, to {
                animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
              }
      
              0% {
                opacity: 0;
                transform: translate3d(0, -3000px, 0);
              }
      
              60% {
                opacity: 1;
                transform: translate3d(0, 25px, 0);
              }
      
              75% {
                transform: translate3d(0, -10px, 0);
              }
      
              90% {
                transform: translate3d(0, 5px, 0);
              }
      
              to {
                transform: translate3d(0, 0, 0);
              }
            }
      
            @keyframes bounceOutDown {
              20% {
                transform: translate3d(0, 10px, 0);
              }
      
              40%, 45% {
                opacity: 1;
                transform: translate3d(0, -20px, 0);
              }
      
              to {
                opacity: 0;
                transform: translate3d(0, 2000px, 0);
              }
            }
          ",
      }
    }
    className="c0"
  >
    1
  </div>
  <div
    animation={
      Object {
        "enter": "bounceInDown",
        "exit": "bounceOutDown",
        "keyframes": "
            @keyframes bounceInDown {
              from, 60%, 75%, 90%, to {
                animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
              }
      
              0% {
                opacity: 0;
                transform: translate3d(0, -3000px, 0);
              }
      
              60% {
                opacity: 1;
                transform: translate3d(0, 25px, 0);
              }
      
              75% {
                transform: translate3d(0, -10px, 0);
              }
      
              90% {
                transform: translate3d(0, 5px, 0);
              }
      
              to {
                transform: translate3d(0, 0, 0);
              }
            }
      
            @keyframes bounceOutDown {
              20% {
                transform: translate3d(0, 10px, 0);
              }
      
              40%, 45% {
                opacity: 1;
                transform: translate3d(0, -20px, 0);
              }
      
              to {
                opacity: 0;
                transform: translate3d(0, 2000px, 0);
              }
            }
          ",
      }
    }
    className="c0"
  >
    2
  </div>
  <div
    animation={
      Object {
        "enter": "bounceInDown",
        "exit": "bounceOutDown",
        "keyframes": "
            @keyframes bounceInDown {
              from, 60%, 75%, 90%, to {
                animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
              }
      
              0% {
                opacity: 0;
                transform: translate3d(0, -3000px, 0);
              }
      
              60% {
                opacity: 1;
                transform: translate3d(0, 25px, 0);
              }
      
              75% {
                transform: translate3d(0, -10px, 0);
              }
      
              90% {
                transform: translate3d(0, 5px, 0);
              }
      
              to {
                transform: translate3d(0, 0, 0);
              }
            }
      
            @keyframes bounceOutDown {
              20% {
                transform: translate3d(0, 10px, 0);
              }
      
              40%, 45% {
                opacity: 1;
                transform: translate3d(0, -20px, 0);
              }
      
              to {
                opacity: 0;
                transform: translate3d(0, 2000px, 0);
              }
            }
          ",
      }
    }
    className="c0"
  >
    3
  </div>
</div>
`;

exports[`TransitionGroup && Transition Components Snapshot (ComponentTransform) 1`] = `
.c0 {
  -webkit-transition: all 1000ms linear;
  transition: all 1000ms linear;
}

.c0.fade-enter {
  opacity: 0.01;
}

.c0.fade-enter.fade-enter-active {
  opacity: 1;
}

.c0.fade-exit {
  opacity: 1;
}

.c0.fade-exit.fade-exit-active {
  opacity: 0.01;
}

.c0.fade-enter {
  opacity: 0.01;
  -webkit-transform: scale3d(0.3,0.3,0.3);
  -ms-transform: scale3d(0.3,0.3,0.3);
  transform: scale3d(0.3,0.3,0.3);
}

.c0.fade-enter.fade-enter-active {
  opacity: 1;
  -webkit-transform: scale3d(2,2,2);
  -ms-transform: scale3d(2,2,2);
  transform: scale3d(2,2,2);
}

.c0.fade-exit {
  opacity: 1;
  -webkit-transform: initial;
  -ms-transform: initial;
  transform: initial;
}

.c0.fade-exit.fade-exit-active {
  opacity: 0.01;
  -webkit-transform: scale3d(0.3,0.3,0.3);
  -ms-transform: scale3d(0.3,0.3,0.3);
  transform: scale3d(0.3,0.3,0.3);
}

<div>
  <div
    animation={
      Object {
        "enter": Object {
          "from": "scale3d(0.3, 0.3, 0.3)",
          "to": "scale3d(2, 2, 2)",
        },
        "exit": Object {
          "from": "initial",
          "to": "scale3d(0.3, 0.3, 0.3)",
        },
      }
    }
    className="c0"
  >
    0
  </div>
  <div
    animation={
      Object {
        "enter": Object {
          "from": "scale3d(0.3, 0.3, 0.3)",
          "to": "scale3d(2, 2, 2)",
        },
        "exit": Object {
          "from": "initial",
          "to": "scale3d(0.3, 0.3, 0.3)",
        },
      }
    }
    className="c0"
  >
    1
  </div>
  <div
    animation={
      Object {
        "enter": Object {
          "from": "scale3d(0.3, 0.3, 0.3)",
          "to": "scale3d(2, 2, 2)",
        },
        "exit": Object {
          "from": "initial",
          "to": "scale3d(0.3, 0.3, 0.3)",
        },
      }
    }
    className="c0"
  >
    2
  </div>
  <div
    animation={
      Object {
        "enter": Object {
          "from": "scale3d(0.3, 0.3, 0.3)",
          "to": "scale3d(2, 2, 2)",
        },
        "exit": Object {
          "from": "initial",
          "to": "scale3d(0.3, 0.3, 0.3)",
        },
      }
    }
    className="c0"
  >
    3
  </div>
</div>
`;
